--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -27,7 +27,7 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="take_turn">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -38,6 +38,19 @@
     </property>
     <property name="text">
      <string>Take Turn</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="fleet_button">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>0</y>
+      <width>80</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Fleet Status</string>
     </property>
    </widget>
   </widget>
@@ -66,8 +79,20 @@
     <addaction name="actionPlayer_3"/>
     <addaction name="actionPlayer_4"/>
    </widget>
+   <widget class="QMenu" name="menuFuel_0">
+    <property name="title">
+     <string>Fuel: 0</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuWin_0">
+    <property name="title">
+     <string>Win %: 0</string>
+    </property>
+   </widget>
    <addaction name="menuOptions"/>
    <addaction name="menuStats"/>
+   <addaction name="menuFuel_0"/>
+   <addaction name="menuWin_0"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
