--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,8 +30,8 @@
    <widget class="QPushButton" name="take_turn">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
+      <x>10</x>
+      <y>10</y>
       <width>80</width>
       <height>21</height>
      </rect>
@@ -43,14 +43,27 @@
    <widget class="QPushButton" name="fleet_button">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>0</y>
+      <x>10</x>
+      <y>70</y>
       <width>80</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
      <string>Fleet Status</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="AI_Turn">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>40</y>
+      <width>80</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Take AI Turn</string>
     </property>
    </widget>
   </widget>
@@ -81,7 +94,7 @@
    </widget>
    <widget class="QMenu" name="menuFuel_0">
     <property name="title">
-     <string>Fuel: 0</string>
+     <string>Fuel: 500</string>
     </property>
    </widget>
    <widget class="QMenu" name="menuWin_0">
